--- a/styles/style.css
+++ b/styles/style.css
@@ -65,3 +65,17 @@ body button {
   border-radius: 5px;
   margin-bottom: 20px;
 }
+.spin {
+  animation-name: spin;
+  animation-duration: 500ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
